Add count unread messages Renamed sentAt field to createdAt in chat model Added column last_message_id to chats table Added native query for chat fetching